--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,20 @@
 div {
-	p {
-		color: red;
-	}
+	width: 50px;
+	height: 50px;
+	position: absolute;
+}
+div.a {
+	background-color: blue;
+	top: 0px;
+	left: 0px;
+}
+div.b {
+	background-color: red;
+	top: 50px;
+	left: 0px;
+}
+div.c {
+	background-color: green;
+	top: 100px;
+	left: 0px;
 }
