--- a/src/index.scss
+++ b/src/index.scss
@@ -1,20 +1,25 @@
-div {
+.a,
+.b,
+.c {
 	width: 50px;
 	height: 50px;
 	position: absolute;
 }
-div.a {
+.a {
 	background-color: blue;
 	top: 0px;
 	left: 0px;
 }
-div.b {
+.b {
 	background-color: red;
 	top: 50px;
 	left: 0px;
 }
-div.c {
+.c {
 	background-color: green;
 	top: 100px;
 	left: 0px;
+}
+.container {
+	padding: 10px;
 }
