--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -5,13 +5,25 @@
 }
 
 .card {
-	position: absolute;
+	// position: absolute;
 	width: 200px;
 	padding: 8px 0px 8px 5px;
 	background: #fff;
 	border: 1px solid #ddd;
 	border-radius: 8px;
 	box-shadow: 1px 1px 5px #ddd;
+	&--high {
+		background-color: #ee9184;
+		border-color: #e7624f;
+	}
+	&--middle {
+		background-color: #fcd995;
+		border-color: #fbc968;
+	}
+	&--low {
+		background-color: #9fcdef;
+		border-color: #76b8e8;
+	}
 	&__title {
 		font-size: 1.2rem;
 	}
