--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -27,3 +27,56 @@
 		margin-top: 5px;
 	}
 }
+
+.form {
+	display: flex;
+	justify-content: center;
+	padding: 10px;
+	margin-bottom: 8px;
+	font-size: 1.4rem;
+	border: 1px solid #ddd;
+	&__title {
+		width: 300px;
+		padding: 5px;
+		margin-right: 12px;
+		font-size: 1.2rem;
+		background: #fff;
+		border: 1px solid #ddd;
+	}
+	&__deadline {
+		width: 195px;
+		height: 30px;
+		margin-right: 12px;
+		background: #fff;
+		border: 1px solid #ddd;
+	}
+	&__importance {
+		width: 50px;
+		height: 30px;
+		background: #fff;
+		border: 1px solid #ddd;
+	}
+	&__label {
+		align-self: center;
+		padding-right: 3px;
+	}
+	&__submit {
+		width: 75px;
+		padding: 5px;
+		margin-left: 20px;
+		color: #76b8e8;
+		text-align: center;
+		border: 1px solid #76b8e8;
+		&:disabled {
+			color: #ddd;
+			cursor: not-allowed;
+			border-color: #ddd;
+		}
+		&:enabled {
+			&:hover {
+				color: #fff;
+				background: #76b8e8;
+			}
+		}
+	}
+}
