--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,6 +3,7 @@
 .container {
 	position: relative;
 	padding: 10px;
+	margin-top: 8px;
 }
 
 .card {
@@ -29,12 +30,39 @@
 }
 
 .form {
+	z-index: 9999;
 	display: flex;
 	justify-content: center;
+	width: 100%;
+	height: 52px;
 	padding: 10px;
-	margin-bottom: 8px;
+	overflow: hidden;
 	font-size: 1.4rem;
+	background: #fff;
 	border: 1px solid #ddd;
+	transition: 0.4s;
+	&.is-close {
+		position: absolute;
+		top: 0;
+		width: 52px;
+		height: 52px;
+		overflow: hidden;
+		line-height: 0;
+	}
+	&__accordionBtn {
+		position: absolute;
+		left: 15px;
+		&.is-hidden {
+			display: none;
+		}
+	}
+	&__inner {
+		display: inline;
+		&.is-hidden {
+			display: none;
+			overflow: hidden;
+		}
+	}
 	&__title {
 		width: 300px;
 		padding: 5px;
